# LCom

./: .gitignore  LICENSE.txt  LitReview.ods  README.md  final_report.markdown  midterm_report.markdown  project_proposal.markdown  todo.markdown
BreakChorLambda/: deadlock.md  demo.md
BreakHasChor/: BreakHasChor.cabal  CHANGELOG.md
BreakHasChor/app/: ChoreoAbuse.hs  HaskellIf.hs  NoBreak.hs  SendSelf.hs
LCom/: ChangeLog.md  LCom.cabal  README.md  package.yaml  stack.yaml
LCom/app/: Main.hs
LCom/src/: Communicate.hs  Communicate.hs.pause  Data.hs  Examples.hs  LCom.hs  Lib.hs  Lib.hs.scratch  Local.hs  Parties.hs  Subset.hs  Subset.hs.scratch  Transmission.hs
LCom/src/LCom/Internal/: Communicate.hs  Data.hs  Local.hs
UniChorLambda/: language.md  noSubtyping.md  scratch.wip.md  withDelta.md
python_choreography/: choreography.py  protocol_bgw.py  protocol_gmw.py  protocol_mult.py  protocol_ot.py  test_protocol.py
