cabal-version:      2.4
name:               BreakHasChor
version:            0.1.0.0

author:             Mako Bates
maintainer:         33739499+ShapeOfMatter@users.noreply.github.com

extra-source-files: CHANGELOG.md

common basic-config
    default-language: Haskell2010
    build-depends:    base >=4.14.3 && <5
                     ,HasChor == 0.1.0.1
    ghc-options:
      -Wall
      -fprint-potential-instances
    default-extensions: BlockArguments
                       ,DataKinds
                       ,GHC2021
                       ,LambdaCase
                       ,TypeOperators

executable no-break
    import: basic-config
    main-is:          NoBreak.hs
    hs-source-dirs:   app

executable send-self
    import: basic-config
    main-is:          SendSelf.hs
    hs-source-dirs:   app

executable choreo-abuse
    import: basic-config
    main-is:          ChoreoAbuse.hs
    hs-source-dirs:   app

executable haskell-if
    import: basic-config
    main-is:          HaskellIf.hs
    hs-source-dirs:   app
